# ionic_demo

./: Dockerfile  README.md  entrypoint.sh  ionic_demo.repos  package.xml
.github/dashboard/: app-config.json
.github/workflows/: build_docker_image.yml
Ionic/: ionic.sdf
Ionic/interior/: model.sdf
fleet_adapter_nav2/: README.md  package.xml  setup.cfg  setup.py
fleet_adapter_nav2/config/: tb4_config.yaml
fleet_adapter_nav2/fleet_adapter_nav2/: fleet_adapter_nav2.py  robot_api.py
fleet_adapter_nav2/maps/: tb4.building.yaml  tb4.nav.yaml
ionic_demo/: CMakeLists.txt  package.xml
ionic_demo/configs/: nav2.rviz  tb4_camera_bridge.yaml
ionic_demo/hooks/: ionic_demo.dsv.in
ionic_demo/launch/: ionic_demo_launch.py  ionic_moveit_demo_launch.py  ionic_navigation_demo_launch.py  ionic_navigation_demo_launch.xml  ionic_rmf_demo_launch.py  tb4_spawn_launch.py  tb4_spawn_launch.xml  world_launch.py  world_launch.xml
ionic_demo/maps/: ionic_demo.pgm  ionic_demo.yaml
ionic_demo/models/: ionic_tb4.urdf.xacro
ionic_demo/params/: nav2_params.yaml
ionic_demo/plugins/ft_sensor_determinism/: CMakeLists.txt  FTSensorDeterminism.cc  FTSensorDeterminism.hh  README.md  ft_sensor_determinism.sdf
ionic_demo/rviz/: nav2_default_view.rviz
ionic_demo/worlds/: ionic.sdf
ionic_demo_building_maps/: CMakeLists.txt  package.xml
ionic_demo_building_maps/maps/ionic_demo/: ionic_demo.building.yaml
ionic_demos_rmf/: CMakeLists.txt  package.xml
ionic_demos_rmf/hooks/: ionic_demos_rmf.dsv.in
ionic_demos_rmf/src/: moveit_dispenser.cpp
launch/: ionic_navigation_demo_launch.py
maps/: ionic_demo.yaml
worlds/: ionic.sdf
