<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ionic_demo</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="tullyfoote@intrinsic.ai">tullyfoote</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>fleet_adapter_nav2</exec_depend>
  <exec_depend>ionic_demo_building_maps</exec_depend>
  <exec_depend>ionic_demos_rmf</exec_depend>
  <exec_depend>moveit</exec_depend>
  <exec_depend>panda</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>rmf_demos</exec_depend>
  <exec_depend>rmf_demos_assets</exec_depend>
  <exec_depend>rmf_robot_sim_gz_plugins</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
