<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ionic_demos_rmf</name>
  <version>0.0.1</version>
  <description>Open-RMF packages for Ionic demo</description>
  <maintainer email="lucadv@intrinsic.ai">Luca Della Vedova</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>gz_sim_vendor</depend>
  <depend>rmf_dispenser_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
